Updated for instance types

--- a/3_aws-qna-langchain-rag.ipynb
+++ b/3_aws-qna-langchain-rag.ipynb
@@ -51,8 +51,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
+      "\u001b[33mWARNING: Ignoring invalid distribution -yzmq (/opt/conda/lib/python3.10/site-packages)\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution -yzmq (/opt/conda/lib/python3.10/site-packages)\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -71,8 +76,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
+      "\u001b[33mWARNING: Ignoring invalid distribution -yzmq (/opt/conda/lib/python3.10/site-packages)\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution -yzmq (/opt/conda/lib/python3.10/site-packages)\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -89,16 +99,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.10/site-packages/scipy/__init__.py:155: UserWarning: A NumPy version >=1.18.5 and <1.25.0 is required for this version of SciPy (detected version 1.25.1\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time,datetime\n",
     "import sagemaker, boto3, json\n",
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -191,12 +192,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "JumpStartModel: {'model_id': 'huggingface-text2text-flan-t5-xxl-bnb-int8', 'model_version': '*', 'instance_type': 'ml.g5.2xlarge', 'tolerate_vulnerable_model': False, 'tolerate_deprecated_model': False, 'region': 'us-east-1', 'model_data': 's3://jumpstart-cache-prod-us-east-1/huggingface-infer/prepack/v1.1.2/infer-prepack-huggingface-text2text-flan-t5-xxl-bnb-int8.tar.gz', 'image_uri': '763104351884.dkr.ecr.us-east-1.amazonaws.com/huggingface-pytorch-inference:1.13.1-transformers4.26.0-gpu-py39-cu117-ubuntu20.04', 'predictor_cls': <class 'sagemaker.base_predictor.Predictor'>, 'name': 'hf-text2text-flan-t5-xxl-bnb-int8-2023-10-12-14-48-50-734', 'sagemaker_session': <sagemaker.session.Session object at 0x7fb19fa0a680>, 'role': 'arn:aws:iam::722831609225:role/service-role/AmazonSageMaker-ExecutionRole-20230604T232185', '_is_compiled_model': False, '_is_edge_packaged_model': False, '_enable_network_isolation': True, 'env': {'SAGEMAKER_PROGRAM': 'inference.py', 'ENDPOINT_SERVER_TIMEOUT': '3600', 'MODEL_CACHE_ROOT': '/opt/ml/model', 'SAGEMAKER_ENV': '1', 'TS_DEFAULT_WORKERS_PER_MODEL': '1', 'SAGEMAKER_MODEL_SERVER_WORKERS': '1'}, 'dependencies': [], 'container_log_level': 20}\n",
-      "2023-10-12 14:48:50 Starting model deployment. This takes around 6 minutes.\n",
-      "--------------!\n",
+      "JumpStartModel: {'model_id': 'huggingface-text2text-flan-t5-xxl-bnb-int8', 'model_version': '*', 'instance_type': 'ml.g5.2xlarge', 'tolerate_vulnerable_model': False, 'tolerate_deprecated_model': False, 'region': 'us-east-1', 'model_data': 's3://jumpstart-cache-prod-us-east-1/huggingface-infer/prepack/v1.1.2/infer-prepack-huggingface-text2text-flan-t5-xxl-bnb-int8.tar.gz', 'image_uri': '763104351884.dkr.ecr.us-east-1.amazonaws.com/huggingface-pytorch-inference:1.13.1-transformers4.26.0-gpu-py39-cu117-ubuntu20.04', 'predictor_cls': <class 'sagemaker.base_predictor.Predictor'>, 'name': 'hf-text2text-flan-t5-xxl-bnb-int8-2023-10-19-17-56-21-628', 'sagemaker_session': <sagemaker.session.Session object at 0x7f16449629b0>, 'role': 'arn:aws:iam::404275508531:role/sm-e2e-SageMakerExecutionRole-1H4UNcewTNuR', '_is_compiled_model': False, '_is_edge_packaged_model': False, '_enable_network_isolation': True, 'env': {'SAGEMAKER_PROGRAM': 'inference.py', 'ENDPOINT_SERVER_TIMEOUT': '3600', 'MODEL_CACHE_ROOT': '/opt/ml/model', 'SAGEMAKER_ENV': '1', 'TS_DEFAULT_WORKERS_PER_MODEL': '1', 'SAGEMAKER_MODEL_SERVER_WORKERS': '1'}, 'dependencies': [], 'container_log_level': 20}\n",
+      "2023-10-19 17:56:21 Starting model deployment. This takes around 6 minutes.\n",
+      "------------!\n",
       "\u001b[1mModel huggingface-text2text-flan-t5-xxl-bnb-int8 has been deployed successfully.\u001b[0m\n",
       "\n",
-      "2023-10-12 14:56:25  Completed model deployment.\n"
+      "2023-10-19 18:02:54  Completed model deployment.\n"
      ]
     }
    ],
@@ -230,19 +231,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "JumpStartModel: {'model_id': 'huggingface-textembedding-gpt-j-6b-fp16', 'model_version': '*', 'instance_type': 'ml.g5.2xlarge', 'tolerate_vulnerable_model': False, 'tolerate_deprecated_model': False, 'region': 'us-east-1', 'model_data': 's3://jumpstart-cache-prod-us-east-1/huggingface-infer/prepack/v1.0.1/infer-prepack-huggingface-textembedding-gpt-j-6b-fp16.tar.gz', 'image_uri': '763104351884.dkr.ecr.us-east-1.amazonaws.com/pytorch-inference:1.12.0-gpu-py38', 'predictor_cls': <class 'sagemaker.base_predictor.Predictor'>, 'name': 'hf-textembedding-gpt-j-6b-fp16-2023-10-12-14-58-27-394', 'sagemaker_session': <sagemaker.session.Session object at 0x7fb19d27e680>, 'role': 'arn:aws:iam::722831609225:role/service-role/AmazonSageMaker-ExecutionRole-20230604T232185', '_is_compiled_model': False, '_is_edge_packaged_model': False, '_enable_network_isolation': True, 'env': {'SAGEMAKER_PROGRAM': 'inference.py', 'ENDPOINT_SERVER_TIMEOUT': '3600', 'MODEL_CACHE_ROOT': '/opt/ml/model', 'SAGEMAKER_ENV': '1', 'TS_DEFAULT_WORKERS_PER_MODEL': '1', 'SAGEMAKER_MODEL_SERVER_WORKERS': '1'}, 'dependencies': [], 'container_log_level': 20}\n",
-      "2023-10-12 14:58:27Starting model deployment. This takes around 6 minutes.\n",
-      "----------!\n",
+      "JumpStartModel: {'model_id': 'huggingface-textembedding-gpt-j-6b-fp16', 'model_version': '*', 'instance_type': 'ml.p3.2xlarge', 'tolerate_vulnerable_model': False, 'tolerate_deprecated_model': False, 'region': 'us-east-1', 'model_data': 's3://jumpstart-cache-prod-us-east-1/huggingface-infer/prepack/v1.0.1/infer-prepack-huggingface-textembedding-gpt-j-6b-fp16.tar.gz', 'image_uri': '763104351884.dkr.ecr.us-east-1.amazonaws.com/pytorch-inference:1.12.0-gpu-py38', 'predictor_cls': <class 'sagemaker.base_predictor.Predictor'>, 'name': 'hf-textembedding-gpt-j-6b-fp16-2023-10-19-18-16-03-666', 'sagemaker_session': <sagemaker.session.Session object at 0x7f16906b7f40>, 'role': 'arn:aws:iam::404275508531:role/sm-e2e-SageMakerExecutionRole-1H4UNcewTNuR', '_is_compiled_model': False, '_is_edge_packaged_model': False, '_enable_network_isolation': True, 'env': {'SAGEMAKER_PROGRAM': 'inference.py', 'ENDPOINT_SERVER_TIMEOUT': '3600', 'MODEL_CACHE_ROOT': '/opt/ml/model', 'SAGEMAKER_ENV': '1', 'TS_DEFAULT_WORKERS_PER_MODEL': '1', 'SAGEMAKER_MODEL_SERVER_WORKERS': '1'}, 'dependencies': [], 'container_log_level': 20}\n",
+      "2023-10-19 18:16:03Starting model deployment. This takes around 6 minutes.\n",
+      "---------------!\n",
       "\u001b[1mModel huggingface-textembedding-gpt-j-6b-fp16 has been deployed successfully.\u001b[0m\n",
       "\n",
-      "2023-10-12 15:04:01  Completed model deployment.\n"
+      "2023-10-19 18:24:07  Completed model deployment.\n"
      ]
     }
    ],
    "source": [
     "# Deploy the Embeddings model \n",
     "\n",
-    "model = JumpStartModel(model_id=EMBEDDINGS_CONFIG['model_id']) \n",
+    "model = JumpStartModel(model_id=EMBEDDINGS_CONFIG['model_id'],instance_type='ml.p3.2xlarge') \n",
     "EMBEDDINGS_CONFIG['model_name'] = model.name\n",
     "\n",
     "print(model)\n",
@@ -297,7 +298,7 @@
      "text": [
       "The question: \u001b[1mWhich instances can I use with Managed Spot Training in SageMaker?\u001b[0m\n",
       "\n",
-      "The generated output is: \u001b[1mSageMaker Spot Training\u001b[0m\n",
+      "The generated output is: \u001b[1mSageMaker Server\u001b[0m\n",
       "\n"
      ]
     }
@@ -347,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -361,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -477,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -548,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -606,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -642,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -677,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -691,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -757,7 +758,7 @@
        "4  Amazon SageMaker ensures that ML model artifac..."
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -782,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -815,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -829,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -868,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -887,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -903,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -919,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -933,7 +934,7 @@
        "'Amazon EC2 Spot instances'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,11 +947,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<langchain.vectorstores.faiss.FAISS at 0x7f1640ff1780>"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#index.query_with_sources(query)\n",
     "#It can also be convenient to filter the vector store by the metadata associated with documents, particularly when your vector store has multiple sources. This can be done using the query method like so:\n",
@@ -961,22 +973,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "VectorStoreRetriever(vectorstore=<langchain.vectorstores.faiss.FAISS object at 0x7f1640ff1780>, search_type='similarity', search_kwargs={})"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "index.vectorstore.as_retriever()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SagemakerEndpointEmbeddingsJumpStart(client=<botocore.client.SageMakerRuntime object at 0x7f1642ccaad0>, endpoint_name='gpt-j-6b-embeddings', region_name='us-east-1', credentials_profile_name=None, content_handler=<__main__.ContentHandler object at 0x7f1642cc82b0>, model_kwargs=None, endpoint_kwargs=None)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "index_creator.embedding"
    ]
@@ -984,6 +1018,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "pycharm": {
      "name": "#%% md\n"
     },
