--- a/2_instruction-fine-tuning-flan-t5.ipynb
+++ b/2_instruction-fine-tuning-flan-t5.ipynb
@@ -67,12 +67,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "id": "ef9bf59d-f7fb-47e1-b2cf-7be6a819be96",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mWARNING: Ignoring invalid distribution -yzmq (/opt/conda/lib/python3.10/site-packages)\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution -yzmq (/opt/conda/lib/python3.10/site-packages)\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install sagemaker==2.166.0 --quiet"
    ]
@@ -89,12 +102,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "c83140fe-f5d2-49ee-a433-70109cf23bd5",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1maws_region:\u001b[0m us-east-1\n",
+      "\u001b[1maws_role:\u001b[0m arn:aws:iam::404275508531:role/sm-e2e-SageMakerExecutionRole-1H4UNcewTNuR\n",
+      "\u001b[1moutput_bucket:\u001b[0m sagemaker-us-east-1-404275508531\n"
+     ]
+    }
+   ],
    "source": [
     "import boto3\n",
     "import sagemaker\n",
@@ -114,19 +137,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "013de37d-0681-44e1-acce-0a854a5b6492",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------!"
+     ]
+    }
+   ],
    "source": [
-    "from sagemaker.jumpstart.model import JumpStartModel\n",
+    "'''from sagemaker.jumpstart.model import JumpStartModel\n",
     "\n",
     "# Replace with larger model if needed\n",
     "model_id, model_version = \"huggingface-text2text-flan-t5-base\", \"*\"\n",
     "pretrained_model = JumpStartModel(model_id=model_id)\n",
-    "pretrained_predictor = pretrained_model.deploy()"
+    "pretrained_predictor = pretrained_model.deploy()'''"
    ]
   },
   {
@@ -138,27 +169,27 @@
    },
    "outputs": [],
    "source": [
-    "print(pretrained_model.endpoint_name)\n",
-    "pre_trained_name = pretrained_model.endpoint_name"
+    "'''print(pretrained_model.endpoint_name)\n",
+    "pre_trained_name = pretrained_model.endpoint_name'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "id": "6a5c9b6b-7e38-4ad5-a757-4e202f9171be",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "text = \"\"\"Summarize this content - Amazon Comprehend uses natural language processing (NLP) to extract insights about the content of documents. It develops insights by recognizing the entities, key phrases, language, sentiments, and other common elements in a document. Use Amazon Comprehend to create new products based on understanding the structure of documents. For example, using Amazon Comprehend you can search social networking feeds for mentions of products or scan an entire document repository for key phrases. \n",
+    "'''text = \"\"\"Summarize this content - Amazon Comprehend uses natural language processing (NLP) to extract insights about the content of documents. It develops insights by recognizing the entities, key phrases, language, sentiments, and other common elements in a document. Use Amazon Comprehend to create new products based on understanding the structure of documents. For example, using Amazon Comprehend you can search social networking feeds for mentions of products or scan an entire document repository for key phrases. \n",
     "You can access Amazon Comprehend document analysis capabilities using the Amazon Comprehend console or using the Amazon Comprehend APIs. You can run real-time analysis for small workloads or you can start asynchronous analysis jobs for large document sets. You can use the pre-trained models that Amazon Comprehend provides, or you can train your own custom models for classification and entity recognition. \"\"\"\n",
-    "query_response = pretrained_predictor.predict(text)"
+    "query_response = pretrained_predictor.predict(text)'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "59aa544a-368b-4fd5-9c31-0740a34041ff",
    "metadata": {
     "tags": []
@@ -173,19 +204,19 @@
     }
    ],
    "source": [
-    "print(query_response[\"generated_text\"])"
+    "'''print(query_response[\"generated_text\"])'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "id": "421b7c0c-3a68-45dc-891b-d3ff2631f25a",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "from sagemaker import serializers\n",
+    "'''from sagemaker import serializers\n",
     "from sagemaker import content_types\n",
     "\n",
     "\n",
@@ -195,19 +226,27 @@
     ")\n",
     "\n",
     "pretrained_predictor.serializer = serializers.JSONSerializer()\n",
-    "pretrained_predictor.content_type = \"application/json\""
+    "pretrained_predictor.content_type = \"application/json\" '''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "1846ed32-7bbf-425f-aabb-9e898b12700f",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Understand the benefits of Amazon Comprehend. Understand the benefits of Amazon Comprehend.\n"
+     ]
+    }
+   ],
    "source": [
-    "from sagemaker import serializers\n",
+    "'''from sagemaker import serializers\n",
     "\n",
     "input_text = \"\"\"Summarize this content - Amazon Comprehend uses natural language processing (NLP) to extract insights about the content of documents. It develops insights by recognizing the entities, key phrases, language, sentiments, and other common elements in a document. Use Amazon Comprehend to create new products based on understanding the structure of documents. For example, using Amazon Comprehend you can search social networking feeds for mentions of products or scan an entire document repository for key phrases.\n",
     "You can access Amazon Comprehend document analysis capabilities using the Amazon Comprehend console or using the Amazon Comprehend APIs. You can run real-time analysis for small workloads or you can start asynchronous analysis jobs for large document sets. You can use the pre-trained models that Amazon Comprehend provides, or you can train your own custom models for classification and entity recognition. \"\"\"\n",
@@ -221,7 +260,19 @@
     "\n",
     "payload = {\"text_inputs\": input_text, **parameters}  # JSON Input format\n",
     "query_response = pretrained_predictor.predict(payload)\n",
-    "print(query_response[\"generated_texts\"][0])"
+    "print(query_response[\"generated_texts\"][0])'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a32db7d6-b63f-447e-b2ca-16fa4c620956",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''# Delete resources to free up instances\n",
+    "pretrained_predictor.delete_model()\n",
+    "pretrained_predictor.delete_endpoint()'''"
    ]
   },
   {
@@ -260,12 +311,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "id": "96bb8fb1-84e1-43d3-981b-769856e1c204",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['./train-v2.0.json']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sagemaker.s3 import S3Downloader\n",
     "\n",
@@ -302,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "id": "3002bc68-2779-4fc0-a68b-cbdd0b3663bd",
    "metadata": {
     "tags": []
@@ -337,12 +399,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 25,
    "id": "0fc435de-a9c3-403e-a24a-f5ef032755cb",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1mtraining data:\u001b[0m s3://sagemaker-us-east-1-404275508531/train_data\n"
+     ]
+    }
+   ],
    "source": [
     "from sagemaker.s3 import S3Uploader\n",
     "\n",
@@ -372,17 +442,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "9a71087e-9c9e-42d7-999e-5f3fac07bc4a",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "2023-10-19 18:57:18 Completed - Training job completed\n",
+      "Training seconds: 3296\n",
+      "Billable seconds: 3296\n"
+     ]
+    }
+   ],
    "source": [
     "from sagemaker.jumpstart.estimator import JumpStartEstimator\n",
     "\n",
     "estimator = JumpStartEstimator(\n",
-    "    model_id=model_id,\n",
+    "    model_id=model_id, instance_type=\"ml.p3.2xlarge\"\n",
     ")\n",
     "\n",
     "estimator.set_hyperparameters(instruction_tuned=\"True\", epoch=\"3\", max_input_length=\"1024\")\n",
@@ -419,24 +500,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "e607c9ea-efcf-4f90-89d7-71cf1f87ed93",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sagemaker:No instance type selected for inference hosting endpoint. Defaulting to ml.g5.2xlarge.\n",
+      "INFO:sagemaker:Creating model with name: hf-text2text-flan-t5-base-2023-10-19-18-57-53-269\n",
+      "INFO:sagemaker:Creating endpoint-config with name hf-text2text-flan-t5-base-2023-10-19-18-57-53-264\n",
+      "INFO:sagemaker:Creating endpoint with name hf-text2text-flan-t5-base-2023-10-19-18-57-53-264\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------!"
+     ]
+    }
+   ],
    "source": [
     "finetuned_predictor = estimator.deploy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 19,
    "id": "bd359f69-7e48-4962-88f6-38a9e090b489",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hf-text2text-flan-t5-base-2023-10-19-18-57-53-264\n"
+     ]
+    }
+   ],
    "source": [
     "fine_tuned_name = finetuned_predictor.endpoint_name\n",
     "print(fine_tuned_name)"
@@ -460,12 +567,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "f7a0c4d9-dc5f-4fdd-9175-05f584ebbc73",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What does Amazon Comprehend use to create new products based on understanding the structure of documents?\n"
+     ]
+    }
+   ],
    "source": [
     "parameters = {\n",
     "    \"max_length\": 40,  # restrict the length of the generated text\n",
@@ -504,8 +619,6 @@
    "outputs": [],
    "source": [
     "# Delete resources\n",
-    "pretrained_predictor.delete_model()\n",
-    "pretrained_predictor.delete_endpoint()\n",
     "finetuned_predictor.delete_model()\n",
     "finetuned_predictor.delete_endpoint()"
    ]
@@ -1130,7 +1243,7 @@
     "vcpuNum": 96
    }
   ],
-  "instance_type": "ml.m5.large",
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
    "display_name": "Python 3 (Data Science 3.0)",
    "language": "python",
