--- a/2_instruction-fine-tuning-flan-t5.ipynb
+++ b/2_instruction-fine-tuning-flan-t5.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "ef9bf59d-f7fb-47e1-b2cf-7be6a819be96",
    "metadata": {
     "tags": []
@@ -77,12 +77,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mWARNING: Ignoring invalid distribution -yzmq (/opt/conda/lib/python3.10/site-packages)\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution -yzmq (/opt/conda/lib/python3.10/site-packages)\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[0m"
      ]
     }
    ],
@@ -102,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "c83140fe-f5d2-49ee-a433-70109cf23bd5",
    "metadata": {
     "tags": []
@@ -113,8 +109,8 @@
      "output_type": "stream",
      "text": [
       "\u001b[1maws_region:\u001b[0m us-east-1\n",
-      "\u001b[1maws_role:\u001b[0m arn:aws:iam::404275508531:role/sm-e2e-SageMakerExecutionRole-1H4UNcewTNuR\n",
-      "\u001b[1moutput_bucket:\u001b[0m sagemaker-us-east-1-404275508531\n"
+      "\u001b[1maws_role:\u001b[0m arn:aws:iam::722831609225:role/service-role/AmazonSageMaker-ExecutionRole-20230401T004358\n",
+      "\u001b[1moutput_bucket:\u001b[0m sagemaker-us-east-1-722831609225\n"
      ]
     }
    ],
@@ -137,27 +133,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "013de37d-0681-44e1-acce-0a854a5b6492",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "------------!"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "'''from sagemaker.jumpstart.model import JumpStartModel\n",
+    "from sagemaker.jumpstart.model import JumpStartModel\n",
     "\n",
     "# Replace with larger model if needed\n",
     "model_id, model_version = \"huggingface-text2text-flan-t5-base\", \"*\"\n",
     "pretrained_model = JumpStartModel(model_id=model_id)\n",
-    "pretrained_predictor = pretrained_model.deploy()'''"
+    "#pretrained_predictor = pretrained_model.deploy()'''"
    ]
   },
   {
@@ -311,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "96bb8fb1-84e1-43d3-981b-769856e1c204",
    "metadata": {
     "tags": []
@@ -323,7 +311,7 @@
        "['./train-v2.0.json']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "3002bc68-2779-4fc0-a68b-cbdd0b3663bd",
    "metadata": {
     "tags": []
@@ -399,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "0fc435de-a9c3-403e-a24a-f5ef032755cb",
    "metadata": {
     "tags": []
@@ -409,7 +397,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1mtraining data:\u001b[0m s3://sagemaker-us-east-1-404275508531/train_data\n"
+      "\u001b[1mtraining data:\u001b[0m s3://sagemaker-us-east-1-722831609225/train_data\n"
      ]
     }
    ],
@@ -442,20 +430,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "9a71087e-9c9e-42d7-999e-5f3fac07bc4a",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sagemaker:Creating training-job with name: hf-text2text-flan-t5-base-2023-10-20-03-35-25-789\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "2023-10-19 18:57:18 Completed - Training job completed\n",
-      "Training seconds: 3296\n",
-      "Billable seconds: 3296\n"
+      "2023-10-20 03:35:26 Starting - Starting the training job.."
      ]
     }
    ],
@@ -1243,7 +1235,7 @@
     "vcpuNum": 96
    }
   ],
-  "instance_type": "ml.t3.medium",
+  "instance_type": "ml.m5.large",
   "kernelspec": {
    "display_name": "Python 3 (Data Science 3.0)",
    "language": "python",
